syntax = "proto3";
package cardchain.cardchain;

import "gogoproto/gogo.proto";
import "cosmos/base/v1beta1/coin.proto";

option go_package = "github.com/DecentralCardGame/cardchain/x/cardchain/types";

message Card {
  string owner = 1;
  string artist = 2;
  bytes content = 3;
  uint64 image_id = 4;
  bool fullArt = 5;
  string notes = 6;
  Status status = 7;
  cosmos.base.v1beta1.Coin votePool = 8 [ (gogoproto.nullable) = false ];
  repeated string voters = 14;
  uint64 fairEnoughVotes = 9;
  uint64 overpoweredVotes = 10;
  uint64 underpoweredVotes = 11;
  uint64 inappropriateVotes = 12;
  int64 nerflevel = 13;
  bool balanceAnchor = 15;
  bool starterCard = 16;
  CardRarity rarity = 17;
}

message CardWithImage {
  Card card = 1;
  string image = 2;
  string hash = 3;
}

enum Status {
  scheme = 0;
  prototype = 1;
  trial = 2;
  permanent = 3;
  suspended = 4;
  banned = 5;
  bannedSoon = 6;
  bannedVerySoon = 7;
  none = 8;
  adventureItem = 9;
}

enum CardRarity {
  common = 0;
  uncommon = 1;
  rare = 2;
  exceptional = 3;
  unique = 4;
}

enum CardClass {
  nature = 0;
  culture = 1;
  mysticism = 2;
  technology = 3;
}

enum CardType {
  place = 0;
  action = 1;
  entity = 2;
  headquarter = 3;
}

message TimeStamp { uint64 timeStamp = 1; }
